# cn-ai-monitor

./: .gitignore
.github/workflows/: pipeline.yml  test-semantic-scholar.yml
actions-runner/: .credentials  .credentials_rsaparams  .runner_migrated
actions-runner/_work/_PipelineMapping/sis017-pixel/cn-ai-monitor/: PipelineFolder.json
actions-runner/_work/_actions/actions/checkout/: v4.completed
actions-runner/_work/_actions/actions/upload-artifact/: v4.completed
actions-runner/_work/_actions/astral-sh/setup-uv/: v5.completed
paper-monitor/: pyproject.toml
paper-monitor/data/processed/: classification_summary_2026-05-21.json  classification_summary_2026-05-22.json  classified_papers_2026-05-21.json  classified_papers_2026-05-22.json  review_candidates_2026-05-21.json  review_candidates_2026-05-22.json  selected_papers_2026-05-21.json  selected_papers_2026-05-22.json  summaries_2026-05-21.json  summaries_2026-05-21.md  summaries_2026-05-22.json  summaries_2026-05-22.md
paper-monitor/data/raw/: papers_2026-05-20.json  papers_2026-05-22.json
paper-monitor/src/paper_monitor/: classify.py  email_digest.py  fetch.py  publish.py  summarize.py  test_semantic_scholar.py  verify.py
paper-monitor/tests/: validation_set.yaml
